Correzione indice Gulpease

--- a/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
+++ b/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
@@ -7,13 +7,14 @@
 \input{\templates/history}
 
 \settitolo{Piano di Qualifica}
-\setredattori{Raffaele Oliviero}
+\setredattori{Raffaele Oliviero \\ Elia Scandaletti}
 \setdestuso{esterno}
 \setdescrizione{
 Questo documento serve a definire le metriche e i criteri di accettazione dei prodotti.
 }
 
 \addversione{0.0.0}{09/01/2021}{Raffaele Oliviero}{Redazione}{Stesura iniziale}
+\addversione{0.0.1}{16/01/2021}{Elia Scandaletti}{Redazione}{Correzione indice di Gulpease}
 
 \begin{document}
 
@@ -30,7 +31,7 @@ Ogni sezione definisce le metriche e i requisiti minimi di una categoria di prod
 \subsection{Metriche}
 \subsubsection{Indice di Gulpease}
 Per il calcolo della leggibilità con:
-\[ \text{Indice di Gulpease} = \frac{300*\text{numero di frasi} - 10*\text{numero di lettere}}{\text{numero di parole}} \]
+\[ \text{Indice di Gulpease} = 89 + \frac{300*\text{numero di frasi} - 10*\text{numero di lettere}}{\text{numero di parole}} \]
 
 
 \subsection{Requisiti minimi}
