Rimozione GitHub actions

--- a/docs/interni/norme_di_progetto/norme_di_progetto.tex
+++ b/docs/interni/norme_di_progetto/norme_di_progetto.tex
@@ -8,7 +8,7 @@
 \settitolo{Norme di progetto}
 \setprogetto{ShopChain}
 \setcommittenti{SyncLab}
-\setredattori{Elia Scandaletti}
+\setredattori{Elia Scandaletti \\ Raffaele Oliviero}
 \setdestuso{interno}
 \setdescrizione{
 Questo documento contiene le procedure, gli strumenti e i criteri di qualità che verranno usati nel progetto. 
@@ -20,6 +20,7 @@ Questo documento contiene le procedure, gli strumenti e i criteri di qualità ch
 \addversione{0.0.3}{22/12/2021}{Elia Scandaletti}{Redazione}{Stesura \ref{documentazione-documenti-verbali-stesura}}
 \addversione{0.0.4}{09/01/2022}{Raffaele Oliviero}{Redazione}{Ristrutturazione documento}
 \addversione{0.0.5}{09/01/2022}{Raffaele Oliviero}{Redazione}{Stesura \ref{documentazione-documenti-piano-di-qualifica} e \ref{verifica-e-validazione}}
+\addversione{0.0.6}{16/01/2022}{Elia Scandaletti}{Redazione}{Adeguamento di \ref{verifica-e-validazione} a decisioni collettive}
 
 
 \begin{document}
@@ -201,7 +202,7 @@ Il file sarà chiamato \texttt{piano\_di\_qualifica.tex}.
 \subsection{Verifica e Validazione}\label{verifica-e-validazione}
 Ogni prodotto per essere accettato nel branch \texttt{main} deve rispettare i requisiti minimi definiti dal \textit{Piano di Qualifica}. 
 
-A tal fine, verranno usate le action di GitHub, impostate in modo tale che la verifica sia automatica.
+A tal fine, verrà predisposto un insieme di test per rendere automatica, in toto o in parte, la verifica e la validazione dei prodotti.
 
 \subsection{Configurazione}
 
