--- a/docs/interni/norme_di_progetto/norme_di_progetto.tex
+++ b/docs/interni/norme_di_progetto/norme_di_progetto.tex
@@ -8,7 +8,7 @@
 \settitolo{Norme di progetto}
 \setprogetto{ShopChain}
 \setcommittenti{SyncLab}
-\setredattori{Elia Scandaletti}
+\setredattori{Elia Scandaletti \\ Raffaele Oliviero}
 \setdestuso{interno}
 \setdescrizione{
 Questo documento contiene le procedure, gli strumenti e i criteri di qualità che verranno usati nel progetto. 
@@ -18,6 +18,10 @@ Questo documento contiene le procedure, gli strumenti e i criteri di qualità ch
 \addversione{0.0.1}{14/11/2021}{Elia Scandaletti}{Redazione}{Stesura \ref{configurazione-github}}
 \addversione{0.0.2}{07/12/2021}{Elia Scandaletti}{Redazione}{Inserimento norme da verbale del 01/12/2021}
 \addversione{0.0.3}{22/12/2021}{Elia Scandaletti}{Redazione}{Stesura \ref{documentazione-documenti-verbali-stesura}}
+\addversione{0.0.4}{09/01/2022}{Raffaele Oliviero}{Redazione}{Ristrutturazione documento}
+\addversione{0.0.5}{09/01/2022}{Raffaele Oliviero}{Redazione}{Stesura \ref{documentazione-documenti-piano-di-qualifica} e \ref{verifica-e-validazione}}
+\addversione{0.0.6}{16/01/2022}{Elia Scandaletti}{Redazione}{Adeguamento di \ref{verifica-e-validazione} a decisioni collettive}
+
 
 \begin{document}
 
@@ -187,6 +191,19 @@ Chi redige il verbale ha 24 ore per completare il lavoro. Chi approva il verbale
 
 Nel secondo caso, il redattore avrà ulteriori 24 ore per adeguarsi alle indicazioni.
 
+\paragraph{Piano di Qualifica}\label{documentazione-documenti-piano-di-qualifica}
+\subparagraph{Scopo}
+Lo scopo del \textit{Piano di Qualifica} è definire le metriche e i requisiti minimi di qualità per l'approvazione dei prodotti del progetto.
+\subparagraph{Titolo}
+Il titolo del documento è ``Piano di Qualifica".
+\subparagraph{Nome del file}
+Il file sarà chiamato \texttt{piano\_di\_qualifica.tex}.
+
+\subsection{Verifica e Validazione}\label{verifica-e-validazione}
+Ogni prodotto per essere accettato nel branch \texttt{main} deve rispettare i requisiti minimi definiti dal \textit{Piano di Qualifica}. 
+
+A tal fine, verrà predisposto un insieme di test per rendere automatica, in toto o in parte, la verifica e la validazione dei prodotti.
+
 \subsection{Configurazione}
 
 \subsubsection{Repository GitHub}\label{configurazione-github}
@@ -194,12 +211,24 @@ Per il versionamento del progetto si è scelto di utilizzare git su piattaforma 
 
 La repository \url{https://github.com/iota97/WinningSoftwareSolution} conterrà tutti i file del progetto.
 
-\paragraph{Workflow di lavoro}
+\paragraph{Comandi utili}
+Alcuni comandi utili sono:
+\begin{itemize}
+\item \textbf{Sincronizzazione con repository remota:} \texttt{git pull};
+\item \textbf{Creazione di un nuovo branch}: \texttt{git branch $<$nome\_branch$>$};
+\item \textbf{Passaggio a un branch specificata:} \texttt{git checkout $<$nome\_branch$>$};
+\item \textbf{Aggiunta delle modifiche alla stage area:} \texttt{git add .};
+\item \textbf{Creazione del commit con le modifiche:} \texttt{git commit};
+\item \textbf{Push sul remote di un nuovo branch:} \texttt{git push --set-upstream origin $<$nome\_branch$>$};
+\item \textbf{Push su un branch già esistente:} \texttt{git push}.
+\end{itemize}
+
+\section{Workflow di lavoro}
 Ogni modifica alla repository dovrà seguire i seguenti passaggi:
 \begin{itemize}
 \item modifica del codice su repository locale;
 \item modifica su un branch collettivo;
-\item pull request tramite piattaforma web GitHub per merge sul branch main;
+\item pull request tramite piattaforma web GitHub per merge sul branch \texttt{main};
 \item review della pull request;
 \item merge sul branch \texttt{main}.
 \end{itemize}
@@ -216,13 +245,15 @@ Non appena chi lavora su un branch collettivo ritenga che ci sia materiale pront
 
 La review dovrà essere fatta dal verificatore. Il verificatore potrà accettare la pull request.
 
+Una pull request può essere accettata solo se tutti i prodotti coinvolti superano i requisiti minimi definiti nel \textit{Piano di Qualifica}.
+
 Quando il verificatore accetta un pull request, dovrà eliminare il branch relativo a quest'ultima.
 
 Non è consentito fare il caricamento diretto di file tramite interfaccia web o desktop.
 
 Non è consentito forzare i push sulla repository remota.
 
-\paragraph{Tracciamento dei progressi}
+\section{Tracciamento dei progressi}
 Per tracciare l'avanzamento del progetto, oltre alla dashboard nel \textit{Piano di Progetto}, verrà utilizzato il sistema di issues e di milestone di GitHub.
 
 Il \textit{Piano di Progetto} definisce quali sono le milestone.
@@ -236,17 +267,5 @@ Ogni issue è legato a una milestone.
 Un issue può essere diviso in più parti utilizzando una task list.
 
 Ogni sotto-task può essere trasformata in un issue. Quest'ultimo dovrà essere collegato alla stessa milestone dell'issue padre.
-
-\paragraph{Comandi utili}
-Alcuni comandi utili sono:
-\begin{itemize}
-\item \textbf{Sincronizzazione con repository remota:} \texttt{git pull};
-\item \textbf{Creazione di un nuovo branch}: \texttt{git branch $<$nome\_branch$>$};
-\item \textbf{Passaggio a un branch specificata:} \texttt{git checkout $<$nome\_branch$>$};
-\item \textbf{Aggiunta delle modifiche alla stage area:} \texttt{git add .};
-\item \textbf{Creazione del commit con le modifiche:} \texttt{git commit};
-\item \textbf{Push sul remote di un nuovo branch:} \texttt{git push --set-upstream origin $<$nome\_branch$>$};
-\item \textbf{Push su un branch già esistente:} \texttt{git push}.
-\end{itemize}
 
 \end{document}
