--- a/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
+++ b/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
@@ -7,7 +7,7 @@
 \input{\templates/history}
 
 \settitolo{Piano di Qualifica}
-\setredattori{Raffaele Oliviero \\ Elia Scandaletti}
+\setredattori{Raffaele Oliviero \\ Elia Scandaletti \\ Giovanni Cocco}
 \setdestuso{esterno}
 \setdescrizione{
 Questo documento serve a definire le metriche e i criteri di accettazione dei prodotti.
